[gd_scene load_steps=2 format=3 uid="uid://ckp5km3bmnkye"]

[ext_resource type="Script" uid="uid://dlc3gunips78p" path="res://Scenes/HR/Hiring.gd" id="1_sbq3v"]

[node name="Hiring" type="Window"]
script = ExtResource("1_sbq3v")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
offset_left = 30.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 620.0

[node name="CardsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="DescriptionPanel" type="Panel" parent="."]
offset_left = 363.0
offset_top = 50.0
offset_right = 963.0
offset_bottom = 625.0
grow_horizontal = 0

[node name="NameLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 43.0
offset_right = 51.0
offset_bottom = 66.0

[node name="BioLabel" type="Label" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 76.0
offset_right = 561.0
offset_bottom = 526.0
autowrap_mode = 3

[node name="HireButton" type="Button" parent="DescriptionPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "HIRE"

[node name="InterviewButton" type="Button" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 72.0
offset_right = 165.0
offset_bottom = 31.0
text = "INTERVIEW"
